# shroud

./: .dir-locals.el  ChangeLog  Makefile  Makefile.am  README  README.md  README.org  TODO  TODO.org  configure.ac  emacs-shroud.org  guix-local.scm  guix.scm  make.el  readme.org  shroud-bui.el  shroud-cli.el  shroud-el.el  shroud-test.el  shroud.el
doc/: Makefile  Makefile.am  emacs-shroud.texi  gendocs_template  prog.texi  urls.texi  version.texi
src/: Makefile.am  shroud-bui.el  shroud-cli.el  shroud-el.el  shroud.el
